# MathParser

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc  nodes.h  parser.cc  parser.h
tst/: CMakeLists.txt  parsertest.cc
